# Light-skills

./: .gitignore  AGENTS.snippet.md  CHANGELOG.md  CITATION.cff  CLAUDE.snippet.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  MODE_REGISTRY.md  README.en.md  README.md  ROUTER.md  ROUTER_EXAMPLES.md  SECURITY.md  WHATS_INCLUDED.md  install.ps1  install.sh
.claude/: INSTALL.md
.claude-plugin/: plugin.json
.codex/: INSTALL.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
_verification_log/: R-facade-imggen-assets.md  R-imggen-deck-e2e.md  R11-freshness-dispatch.md  R12-02-windows-install-ci.md  R12-03-animal-ethics-standards.md  R12-08-competitor-matrix.md  R4-01-retraction-check.md  R4-02-ai-image-policy.md  R4-03-db01-ai-policy.md  R4-08-biorxiv.md  R4-09-grey-literature.md  R4-12-latexdiff.md  R4-13-feishu-slides.md  R4-15-specter2.md  R5-04-power-analysis.md  R6-imggen-api.md  R7-tex-compile.md  R8-ci-gates.md  R9-batch1-card-spotcheck.md  R9-batch2-db01-spotcheck.md  R9-batch3-palette-verification.md  README.md  api_fields.md  lib_specifics.md  r3_chinese_chain.md  session_handoff_drill.md  skill_sources.md  task2_errata.md
assets/: demo.tape  make_pipeline_svg.py  make_social_preview.py  make_social_preview_hybrid.py
docs/analysis/: README.md  (+8 more)
evals/: README.md
projects/dairygoat-detect-track/: README.md  pyproject.toml
projects/dairygoat-detect-track/.light/handoff/: S01-behavior-training-scaffold.md  S02-innovation-lock-annotation.md
projects/dairygoat-detect-track/configs/: bytetrack_goat.yaml  goat_det.yaml  train.yaml
projects/dairygoat-detect-track/src/: infer_track.py  train.py
projects/dairygoat-detect-track/tests/: test_infer_track.py
skills/light-backend-coding/assets/project-scaffold/: README.md  pyproject.toml
skills/light-backend-coding/assets/project-scaffold/.github/workflows/: ci.yml
skills/light-backend-coding/assets/project-scaffold/tests/: conftest.py
(+384 files in other folders)
