# 复制即用的项目骨架。版本号于 2026-06 经 PyPI / GitHub API 实测存在。
# 改 <project-name> / 作者信息后即可 `uv sync && uv run pytest`。
[project]
name = "example-project"
version = "0.1.0"
description = "Backend project scaffold (light-backend-coding)"
requires-python = ">=3.11"
dependencies = [
    # 运行期依赖写这里，例如：
    # "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",       # 2026-06 PyPI 最新 9.0.3
    "pytest-cov>=7.0",
    "ruff>=0.15",        # 2026-06 PyPI 最新 0.15.16
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 项目名(example-project)与包目录(src/example)不同名，须显式告诉 hatchling
# 要打包哪个目录，否则 `pip install -e .` / `uv sync` 会报无法确定 wheel 内容。
[tool.hatch.build.targets.wheel]
packages = ["src/example"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# 默认 = ["E4","E7","E9","F"]；这里叠加 bugbear(B) 与 isort(I)
extend-select = ["B", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x"
markers = [
    "slow: 标记慢测试 (用 `-m 'not slow'` 跳过)",
]
